terraform/kubernetes/cluster-policies/cilium/cilium-module/sources/argocd/cnp-argocd-observed-ingress-candidate.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-argocd-observed-ingress-candidate
  namespace: argocd
  annotations:
    "policies.cilium.io/title": "Argocd observed ingress candidate"
    "platform.publiccloudexperiments.net/source-kind": "CiliumNetworkPolicy"
    "platform.publiccloudexperiments.net/hubble-policy-candidate": "true"
    "platform.publiccloudexperiments.net/hubble-policy-direction": "ingress"
    "platform.publiccloudexperiments.net/hubble-policy-mode": "workload"
    "platform.publiccloudexperiments.net/hubble-policy-row-count": "5"
    "platform.publiccloudexperiments.net/hubble-policy-since": "5m"
    "platform.publiccloudexperiments.net/hubble-policy-iterations": "3"
    "platform.publiccloudexperiments.net/hubble-policy-capture-mode": "flows"
specs:
  - description: >-
      Observed ingress traffic from argocd/argocd-application-controller
    endpointSelector:
      matchLabels:
        "k8s:io.kubernetes.pod.namespace": "argocd"
        "k8s:app.kubernetes.io/name": "argocd-application-controller"
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8082"
                protocol: TCP
  - description: >-
      Observed ingress traffic from argocd/argocd-repo-server
    endpointSelector:
      matchLabels:
        "k8s:io.kubernetes.pod.namespace": "argocd"
        "k8s:app.kubernetes.io/name": "argocd-repo-server"
    ingress:
      - fromEndpoints:
          - matchLabels:
              "k8s:io.kubernetes.pod.namespace": "argocd"
              "k8s:app.kubernetes.io/name": "argocd-application-controller"
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8084"
                protocol: TCP
  - description: >-
      Observed ingress traffic from argocd/argocd-server
    endpointSelector:
      matchLabels:
        "k8s:io.kubernetes.pod.namespace": "argocd"
        "k8s:app.kubernetes.io/name": "argocd-server"
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
